fix the header issue in mobile version it overlaps on itself

--- a/css/style.css
+++ b/css/style.css
@@ -112,8 +112,8 @@ body {
 .headline h3 {
   padding: 0;
   font-family: 'Lato', sans-serif;
-  font-size: 40px;
-  font-weight: 300;
+  font-size: 20px;
+  font-weight: 600;
   color: #ec4542;
   margin-bottom: 1em;
   margin-top: 2em;
